Fix alignment of group addons in panel controls
Due to the way we added support for advanced controls in panel
headers, some of the alignment tweaks normally made to input groups
and addons weren't being applied properly to our panels. This adds
new CSS rules with an equivalent effect so input group addons are
properly attached to any addons, removing any odd gaps or rounded
corners that shouldn't exist.

--- a/app/styles/_openstack-health.scss
+++ b/app/styles/_openstack-health.scss
@@ -62,6 +62,16 @@ table.default-cols {
         @extend .pull-right;
 
         width: 50%;
+
+        .input-group-addon:first-child {
+            position: relative;
+            left: 2px;
+
+            * {
+                position: relative;
+                left: -1px;
+            }
+        }
     }
 
     > .form-inline {
@@ -71,6 +81,22 @@ table.default-cols {
             @extend .input-group-sm;
 
             min-width: 250px;
+
+            .input-group-addon:first-child {
+                position: relative;
+                left: 2px;
+                width: 1px;
+
+                * {
+                    position: relative;
+                    left: -1px;
+                }
+
+                & + input {
+                    border-bottom-left-radius: 0;
+                    border-top-left-radius: 0;
+                }
+            }
         }
 
         .btn-group {
